--- a/.github/workflows/book.yaml
+++ b/.github/workflows/book.yaml
@@ -22,7 +22,7 @@ jobs:
       # - name: automesh
       #   run: cargo install --path .
       - name: mdbook
-        run: cargo install mdbook mdbook-cmdrun mdbook-katex
+        run: cargo install mdbook mdbook-cmdrun #mdbook-katex
       # - name: svgbob
       #   run: cargo install --locked mdbook-svgbob
       # - name: rust
