--- a/hi_world/pyproject.toml
+++ b/hi_world/pyproject.toml
@@ -13,7 +13,7 @@ version = '0.0.1'
 
 [project.urls]
 # Documentation = 'https://automesh.readthedocs.io'
-# Homepage = 'https://autotwin.github.io/automesh'
+Homepage = 'https://atpolonsky.github.io/rust_school/'
 Repository = 'https://github.com/atpolonsky/rust_school'
 
 
