--- a/hi_world/pyproject.toml
+++ b/hi_world/pyproject.toml
@@ -6,7 +6,13 @@ build-backend = "setuptools.build_meta"
 name = "hi_world"
 requires-python = ">3.10"
 dependencies = [
-    "h5py==3.11.0",
+  'black',
+  'pdoc',
+  'pre-commit',
+  'pycodestyle',
+  'pytest',
+  'pytest-cov',
+  'h5py==3.11.0',
 ]
 
 version = '0.0.1'
