--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -12,9 +12,7 @@ build:
     # - pdoc automesh --logo "https://github.com/autotwin/automesh/blob/main/docs/logo.png?raw=true" --math --no-show-source --output-dir $READTHEDOCS_OUTPUT/html/ --template-directory docs/
     # - VERSION=$(cargo tree | grep automesh | cut -d " " -f 2 | cut -d "v" -f 2) && sed -i "s/automesh latest/automesh $VERSION/" $READTHEDOCS_OUTPUT/html/automesh.html
     - pip install pdoc
-    - cd hi_world/
-    - ls
-    - pip install .
+    - pip install hi_world/.
     - pdoc hi_world --docformat numpy --template-directory ./docs/ --logo "https://github.com/atpolonsky/rust_school/blob/main/hi_world/docs/logo.png?raw=true"
     # - VERSION=$(cargo tree | grep automesh | cut -d " " -f 2 | cut -d "v" -f 2) && sed -i "s/automesh latest/automesh $VERSION/" $READTHEDOCS_OUTPUT/html/automesh.html
     # - mkdir -p $READTHEDOCS_OUTPUT/html/
